--- a/make_your_own_net.ipynb
+++ b/make_your_own_net.ipynb
@@ -5,7 +5,7 @@
    "id": "5a6d264e-3b39-41b9-af3c-61837c6e99a3",
    "metadata": {},
    "source": [
-    "# Contruye tu primera red neuronal desde cero"
+    "# Construye tu primera red neuronal desde cero"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "de3cfc98-eb78-473c-8f60-ab67b6fb93d5",
    "metadata": {},
    "source": [
-    "Todo eso está genial, y es el estado del arte sobre el que se apoya todo lo que usamos a día de hoy (por ejemplo, los LLM o modelos de visión). Sin embargo, todo esto esta cimentado por una base muy sólida, y, he prepado este notebook para que todos salgais de esta charla conociendola."
+    "Todo eso está genial, y es el estado del arte sobre el que se apoya todo lo que usamos a día de hoy (por ejemplo, los LLM o modelos de visión). Sin embargo, está cimentado por una base muy sólida, y, he preparado este notebook para que todos salgais de esta charla conociéndola."
    ]
   },
   {
@@ -47,7 +47,7 @@
    "id": "f5138f45-48fe-432f-8ddb-e91c32701ca9",
    "metadata": {},
    "source": [
-    "Cuando digo desde cero es desde cero, no vamos a usar ningun framework super conocido, como puede ser PyTorch o Tensorflow. Nos apoyaremos en Python puro y un paquete que sirve para trabajar con arrays llamado \"numpy\"."
+    "Cuando digo desde cero es desde cero, no vamos a usar ningún framework conocido, como puede ser PyTorch o Tensorflow, que abstraen mucho como funciona todo. Nos apoyaremos en Python puro y un paquete que sirve para trabajar con arrays llamado \"numpy\"."
    ]
   },
   {
@@ -128,7 +128,7 @@
    "id": "01cbc7df-6205-4ff3-97a3-5af76bfb47e5",
    "metadata": {},
    "source": [
-    "Con lo que teneis que quedaros es que una red neuronal no es más que un modelo que aprende patrones en datos y resuelve tareas como clasificación o predicción. El ejemplo mas sencillo, y que nos sirve para aprender la base de todo es el perceptron multicapa, que fue propuesto en 1958 por Frank Rosenblatt."
+    "Con lo que teneis que quedaros es que una red neuronal no es más que un modelo que aprende patrones en datos y resuelve tareas como clasificación o predicción. El ejemplo más sencillo, y que nos sirve para aprender la base de todo es el perceptrón multicapa, que fue propuesto en 1958 por Frank Rosenblatt."
    ]
   },
   {
@@ -152,7 +152,7 @@
    "id": "b7a57684-e8dd-4f6a-b734-ed136dd2dc0e",
    "metadata": {},
    "source": [
-    "A pesar del jaleo que se ve ahí, esto es realmente sencillo. Esta red esta formada por 3 tipos de capas como podemos ver, veamos que hace cada una:\n",
+    "A pesar del jaleo que se ve ahí, esto es realmente sencillo. Esta red está formada por 3 tipos de capas como podemos ver, veamos que hace cada una:\n",
     "1. Capa de entrada: Esta capa no es más que la capa que recibe los datos y los pasa a la siguiente capa, así de sencillo.\n",
     "2. Capas ocultas: Recibe la salida de la capa anterior, calcula combinaciones ponderadas, e introducen no linealidad (de esta forma se aprenden relaciones complejas)\n",
     "3. Capa de salida: Reciben la salida de la última capa oculta y generan el resultado final"
@@ -180,7 +180,7 @@
    "metadata": {},
    "source": [
     "El algoritmo cuenta con tan solo dos pasos:\n",
-    "1. Forward: En este, la red neuronal recibe un dato de entrada, y lo propaga hasta el final (se aplican todas las operaciones), obteniendose un valor de salida.\n",
+    "1. Forward: En este, la red neuronal recibe un dato de entrada, y lo propaga hasta el final (se aplican todas las operaciones), obteniÉndose un valor de salida.\n",
     "2. Backward: Se mira como de acertada es la salida de la red, y, en base a esto, se calcula el gradiente de cada peso respecto de esa pérdida. Esto lo que nos dice es como hay que actualizar los pesos de nuestra red para disminuir el error de la salida."
    ]
   },
@@ -197,7 +197,7 @@
    "id": "72c00af4-abf5-4b6d-8baa-a2b7737fb57f",
    "metadata": {},
    "source": [
-    "Para entender el paso forward, es necesario entender cómo funciona cada parte de una red neuronal, y que operaciones se realizan. Para esto solo hay que entender que hace cada nodo o neurona de la red. Para esto vamos a coger de ejemplo la primera neurona de nuestra red y vamos a entender que ocurre cuando enviamos datos por las capas de entrada."
+    "Para entender el paso forward, es necesario entender cómo funciona cada parte de una red neuronal, y que operaciones se realizan. Para esto solo hay que entender que hace cada nodo o neurona de la red. Para esto vamos a tomar como ejemplo la primera neurona de nuestra red y vamos a entender qué ocurre cuando enviamos datos por las capas de entrada."
    ]
   },
   {
@@ -311,7 +311,7 @@
    "source": [
     "Hay muchas funciones de activación, pero la más tipica es la Rectified Linear Unit (ReLU). Esta viene descrita por la ecuación $$\n",
     "f(x) = \\max(0, x)\n",
-    "$$ Que graficamente sería:"
+    "$$ Que gráficamente sería:"
    ]
   },
   {
